# tiycore

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README-ZH.md  README.md
.github/workflows/: pr-review.yml
docs/: CODEBASE_MAP.md  CODEBASE_MODULES.txt  CODEBASE_README.md  CODEBASE_SUMMARY.txt
src/agent/: README.md  agent.rs  mod.rs  queue.rs  types.rs
src/catalog/: mod.rs
src/protocol/: anthropic.rs  common.rs  openai_completions.rs  openai_responses.rs
src/provider/: bai.rs  deepseek.rs  groq.rs  mod.rs  registry.rs  xai.rs  xiaomi_mimo.rs  zai.rs
src/stream/: event_stream.rs
src/types/: model.rs
tests/: test_agent.rs  test_delegation_providers.rs  test_provider_openai.rs  test_stream.rs  test_thinking_mappings.rs  test_types.rs
