[package]
name = "tiycore"
version = "0.1.0"
edition = "2021"
description = "Unified LLM API and stateful Agent runtime in Rust"
license = "MIT"
authors = ["TiyAgents Team"]
readme = "README.md"
repository = "https://github.com/tiylabs/tiycore"
homepage = "https://github.com/tiylabs/tiycore"
documentation = "https://docs.rs/tiycore"
keywords = ["llm", "ai", "agent", "openai", "anthropic"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 流处理
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"

# JSON Schema 验证
jsonschema = "0.18"
schemars = "0.8"

# 并发
parking_lot = "0.12"
arc-swap = "1.7"

# 取消令牌
tokio-util = { version = "0.7", features = ["rt"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志
tracing = "0.1"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1", features = ["v4", "serde"] }

# 懒加载
once_cell = "1.19"

# Async trait
async-trait = "0.1"

# URL parsing & validation
url = "2"

# HTTP date parsing (Retry-After header)
httpdate = "1"

# Hashing
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "agent_example"
path = "examples/agent_example.rs"
